# exoplanets-discovery

./: LICENSE  README.md  main.py  pyproject.toml
data/processed/: kepler_10.parquet  kepler_186.parquet
src/eda/: loader.py  phase_folder.py  visualizer.py
src/ingestion/: models.py  pipeline.py  provider.py  storage.py
tests/eda/: conftest.py  test_loader.py  test_phase_folder.py  test_visualizer.py
tests/ingestion/: test_models.py  test_provider.py  test_storage.py
